# tick-list

./: .env.example  .gitignore  CLAUDE.md  alembic.ini  docker-compose.yml  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation-schema/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-UAT.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
alembic/: env.py
alembic/versions/: 1774608527_001_initial_schema.py
tests/: conftest.py  test_grades.py  test_migrations.py  test_models.py
tick_list/: api.py  config.py  grades.py  mcp.py  models.py  services.py
