[project]
name = "tick-list"
version = "0.1.0"
description = "Personal climbing logbook and fitness data platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128,<1",
    "uvicorn[standard]>=0.42,<1",
    "fastmcp>=3.1,<4",
    "sqlalchemy==2.0.48",
    "geoalchemy2>=0.18,<1",
    "alembic>=1.18,<2",
    "asyncpg>=0.31,<1",
    "pydantic-settings>=2.13,<3",
    "python-multipart",
    "pillow>=12,<13",
    "httpx>=0.28,<1",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "testcontainers[postgres]",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = ["requires_docker: tests that need Docker running"]
